--- a/content/articles/lorem-ipsum.mdx
+++ b/content/articles/lorem-ipsum.mdx
@@ -1,10 +1,10 @@
 ---
-slug: welcome
-title: Welcome To Next.js and Netlify Blog Template
-date: 2020-06-10
+slug: lorem-ipsum
+title: Lorem Ipsum
+date: 2020-06-03
 author: wutali
 tags:
-  - document
+  - mock
 ---
 
 ## The standard Lorem Ipsum passage
